--- a/Views/Anthropometries/Details.cshtml
+++ b/Views/Anthropometries/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model PatientCard.Models.Temperature
+﻿@model PatientCard.Models.Anthropometry
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Temperature</h4>
+    <h4>Anthropometry</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -31,6 +31,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.TemperatureId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.AnthropometryId">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
