--- a/Views/Oxygens/Index.cshtml
+++ b/Views/Oxygens/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PatientCard.Models.Temperature>
+﻿@model IEnumerable<PatientCard.Models.Oxygen>
 
 @{
     ViewData["Title"] = "Index";
@@ -18,7 +18,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Date)
             </th>
-            
+            <th>
+                @Html.DisplayNameFor(model => model.User)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -32,9 +34,12 @@
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.TemperatureId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.TemperatureId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.TemperatureId">Delete</a>
+                @Html.DisplayFor(modelItem => item.User.Id)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.OxygenId">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.OxygenId">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.OxygenId">Delete</a>
             </td>
         </tr>
 }
