--- a/Views/Pressures/Create.cshtml
+++ b/Views/Pressures/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model PatientCard.Models.Temperature
+﻿@model PatientCard.Models.Pressure
 
 @{
     ViewData["Title"] = "Create";
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>Temperature</h4>
+<h4>Pressure</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -37,7 +37,5 @@
 </div>
 
 @section Scripts {
-    @{
-        await Html.RenderPartialAsync("_ValidationScriptsPartial");
-    }
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
