--- a/Views/Analyzes/Delete.cshtml
+++ b/Views/Analyzes/Delete.cshtml
@@ -1,57 +1,55 @@
 ﻿@model PatientCard.Models.Analyze
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Удалить";
 }
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
+<h1>Удалить</h1>
+<h3>Вы уверены, что хотите удалить этот элемент?</h3>
 <div>
-    <h4>Analyze</h4>
+    <h4>Анализ</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Departament)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Departament.IdDepartament)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Departament.NameDepartament)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Organization)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Organization.IdOrganization)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Organization.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Service)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Service.IdService)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Service.NameService)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.DateAnalyzes)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.DateAnalyzes)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Doctor)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Doctor.IdDoctor)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Doctor.FullNameDoctor)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.User)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.Id)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.User.FirstName) @Html.DisplayFor(model => model.User.LastName)
         </dd>
     </dl>
-    
     <form asp-action="Delete">
         <input type="hidden" asp-for="IdAnalyzes" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Удалить" class="btn btn-danger" /> |
+        <a asp-action="Index">Вернуться к списку</a>
     </form>
 </div>
