--- a/Views/Analyzes/Details.cshtml
+++ b/Views/Analyzes/Details.cshtml
@@ -5,50 +5,27 @@
 }
 
 <h1>Details</h1>
-
-<div>
-    <h4>Analyze</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Departament)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Departament.IdDepartament)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Organization)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Organization.IdOrganization)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Service)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Service.IdService)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateAnalyzes)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateAnalyzes)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Doctor)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Doctor.IdDoctor)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.User)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.User.Id)
-        </dd>
-    </dl>
+<div class="card">
+    <div class="card-body">
+        <h4 class="card-title">Analyze</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">Department:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.Departament.NameDepartament)</dd>
+            <dt class="col-sm-2">Organization:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.Organization.Name)</dd>
+            <dt class="col-sm-2">Service:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.Service.NameService)</dd>
+            <dt class="col-sm-2">Date Analyzes:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.DateAnalyzes)</dd>
+            <dt class="col-sm-2">Doctor:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.Doctor.FullNameDoctor)</dd>
+            <dt class="col-sm-2">User:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.User.FirstName) @Html.DisplayFor(model => model.User.LastName)</dd>
+        </dl>
+    </div>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.IdAnalyzes">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class="mt-3">
+    <a class="btn btn-primary" asp-action="Edit" asp-route-id="@Model?.IdAnalyzes">Edit</a>
+    <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 </div>
